Implement API changes for basic crud
